Added SegmentIntegerBlock.quickTopK + some unit tests